--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head> 
-<title>Perpustakaan Aura</title> 
+<title>Beranda</title> 
 </head>
 <body>
-<h1>About me</h1>
+<h1>PERPUSTAKAAN AURA/h1>
 <h2>Selamat datang di Perpustakaan Aura</h2>
 <p>Perkenalkan, nama saya <b>Aura Adisty Lesmana</b> dan ini adalah perpustakaan pribadi saya. 
 <i>Homepage</i> ini berisi tentang informasi penting mengenai perpustakaan saya.</p>
