--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Beranda</title></head>
+<head>Beranda</head>
 <body>
 <h1>PERPUSTAKAAN AURA</h1>
 <h2>Selamat datang di Perpustakaan Aura</h2>
