--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
-<head><title>PERPUSTAKAAN AURA</title></head>
+<head>PERPUSTAKAAN AURA</head>
 <body>
-<h1>Beranda</h1>
-<h2>Selamat datang di Perpustakaan Aura</h2>
-<p>Perkenalkan, nama saya <b>Aura Adisty Lesmana</b> dan ini adalah perpustakaan pribadi saya. 
-<i>Homepage</i> ini berisi tentang informasi penting mengenai perpustakaan saya.</p>
+<h1>About Me</h1>
+<h2>Selamat Datang di Perpustakaan Aura</h2>
+<p>Perkenalkan nama saya adalah <b>Aura Adisty Lesmana</b> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu dan wawasan. 
+  Halaman ini berisi tentang ringkasan singkat hal-hal yang dapat Anda temukan di Perpustakaan Aura. Perpustakaan ini akan berisi koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta e-book gratis yang dapat diakses.</p>
 <h3><b>Kerja Sama dengan Perpustakaan Lain</b></h3>
 <a href="https://library.usu.ac.id/">Website Perpustakaan USU</a>
 </body>
