--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
-<head>PERPUSTAKAAN AURA</head>
+<head><title>PERPUSTAKAAN AURA</title></head>
 <body>
-<h1>About Me</h1>
-<h2>Selamat Datang di Perpustakaan Aura</h2>
-<p>Perkenalkan nama saya adalah <b>Aura Adisty Lesmana</b> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu dan wawasan. 
-  Halaman ini berisi tentang ringkasan singkat hal-hal yang dapat Anda temukan di Perpustakaan Aura. Perpustakaan ini akan berisi koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta e-book gratis yang dapat diakses.</p>
-<h3><b>Kerja Sama dengan Perpustakaan Lain</b></h3>
+<h1>PERPUSTAKAAN AURA</h1>
+  <h2>About Me</h2>
+<p><b></b>Selamat Datang di Perpustakaan Aura!</b></p>
+<p>Perkenalkan nama saya adalah <b>Aura Adisty Lesmana</b> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
+  Perpustakaan ini akan berisi berbagai koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta <i>e-book</i> yang dapat diakses secara gratis.</p>
+  <h3>Kerja Sama dan Referensi</h3>
 <a href="https://library.usu.ac.id/">Website Perpustakaan USU</a>
 </body>
 </html>
