--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>PERPUSTAKAAN AURA</h1>
   <h2>About Me</h2>
-<p><b></b>Selamat Datang di Perpustakaan Aura!</b></p>
+<p><b>Selamat Datang di Perpustakaan Aura!</b></p>
 <p>Perkenalkan nama saya adalah <b>Aura Adisty Lesmana</b> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
   Perpustakaan ini akan berisi berbagai koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta <i>e-book</i> yang dapat diakses secara gratis.</p>
   <h3>Kerja Sama dan Referensi</h3>
