--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <p>Perkenalkan nama saya adalah <b>Aura Adisty Lesmana</b> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
   Perpustakaan ini akan berisi berbagai koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta <i>e-book</i> yang dapat diakses secara gratis.</p>
   <h3>Kerja Sama dan Referensi</h3>
-<a href="https://library.usu.ac.id/">Website Perpustakaan USU</a>
+<a href="https://lib.ui.ac.id/">Perpustakaan Universitas Indonesia</a>
 </body>
 </html>
