--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head><title>Beranda</title></head>
 <body>
 <h1>PERPUSTAKAAN AURA</h1>
-  <h2>elamat Datang di Perpustakaan Aura!</h2>
+  <h2>Selamat Datang di Perpustakaan Aura!</h2>
 <p>Perkenalkan nama saya adalah <b>Aura Adisty Lesmana</b> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
   Perpustakaan ini akan berisi berbagai koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta <i>e-book</i> yang dapat diakses secara gratis.</p>
   <h3>Kerja Sama dan Referensi</h3>
