--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,8 +1,7 @@
-</head>
+<html>
+<head>About Me</head>
 <body>
-
-    <h1>Data Pribadi</h1>
-
+ <h1>Data Pribadi</h1>
     <table>
         <tr>
             <th>Informasi</th>
