--- a/about-me.html
+++ b/about-me.html
@@ -1,7 +1,43 @@
-<html>
-<head>About Me</head>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Pribadi</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+        h1 {
+            color: #2c3e50;
+        }
+        table {
+            width: 50%;
+            margin: 20px auto;
+            border-collapse: collapse;
+            background: white;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #2c3e50;
+            color: white;
+            text-align: center;
+        }
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+    </style>
+</head>
 <body>
-<h1>Data Pribadi</h1>
+
+    <h1>Data Pribadi</h1>
+
     <table>
         <tr>
             <th>Informasi</th>
@@ -13,7 +49,7 @@
         </tr>
         <tr>
             <td><b>NIM</b></td>
-            <td>220709067</td>
+            <td>123456789</td>
         </tr>
         <tr>
             <td><b>Program Studi</b></td>
@@ -21,7 +57,7 @@
         </tr>
         <tr>
             <td><b>Fakultas</b></td>
-            <td>Ilmu Budaya</td>
+            <td>Ilmu Sosial dan Humaniora</td>
         </tr>
         <tr>
             <td><b>Universitas</b></td>
