--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h3>Halaman lain</h3>
     <ul>
         <li>
-            <a href="about.html">About Me</a>
+            <a href="about-me.html">About Me</a>
         </li>
         <li>
             <a href="contact-us.html">Contact Us</a>
