--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
 <h2>Selamat Datang di Perpustakaan Aura!</h2>
 <p>Perkenalkan nama saya adalah <b>Aura Adisty Lesmana</b> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
   Perpustakaan ini akan berisi berbagai koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta <i>e-book</i> yang dapat diakses secara gratis.</p>
-<h3>Halaman lain</h3>
-    <ul>
-        <li>
-            <a href="about-me.html">About Me</a>
-        </li>
-        <li>
-            <a href="contact-us.html">Contact Us</a>
-        </li>
-    </ul>
-</body>
-</html>
-<h4>Kerja Sama dan Referensi</h4>
+<h3>Kerja Sama dan Referensi</h3>
 <a href="https://lib.ui.ac.id/">Perpustakaan Universitas Indonesia</a>
+<h4><ul>
+        <li>
+            <a href="Tentang-saya.html">About Me</a>
+        </li> </ul>
+</h4>
+ <h5> <ul> <li>
+            <a href="Hubungi-kami.html">Contact Us</a>
+        </li>
+    </ul> </h5>   
 </body>
 </html>
