Update and rename about-me.html to tentang-saya.html

--- a/tentang-saya.html
+++ b/tentang-saya.html
@@ -49,7 +49,7 @@
         </tr>
         <tr>
             <td><b>NIM</b></td>
-            <td>123456789</td>
+            <td>220709067</td>
         </tr>
         <tr>
             <td><b>Program Studi</b></td>
@@ -57,7 +57,7 @@
         </tr>
         <tr>
             <td><b>Fakultas</b></td>
-            <td>Ilmu Sosial dan Humaniora</td>
+            <td>Ilmu Budaya</td>
         </tr>
         <tr>
             <td><b>Universitas</b></td>
