--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <a href="https://lib.ui.ac.id/">Perpustakaan Universitas Indonesia</a>
 <h4><ul>
         <li>
-            <a href="Tentang-saya.html">About Me</a>
+            <a href="Tentang-saya.html">Tentang Saya</a>
         </li> </ul>
 </h4>
  <h4> <ul> <li>
-            <a href="Hubungi-kami.html">Contact Us</a>
+            <a href="Hubungi-kami.html">Hubungi kami</a>
         </li>
     </ul> </h4>   
 </body>
