--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -11,7 +11,7 @@
             text-align: center;
         }
         h1 {
-            color: #2c3e50;
+            color: #0000ff;
         }
         table {
             width: 50%;
@@ -37,7 +37,7 @@
 <body>
 
     <h1>Data Pribadi</h1>
-
+<p>Halaman ini berisi tentang informasi pribadi saya</p>
     <table>
         <tr>
             <th>Informasi</th>
@@ -64,6 +64,11 @@
             <td>Universitas Sumatera Utara</td>
         </tr>
     </table>
-
+    <h4>Kembali ke Beranda</h4>
+    <ul>
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+    </ul>
 </body>
 </html>
