--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -64,11 +64,7 @@
             <td>Universitas Sumatera Utara</td>
         </tr>
     </table>
-    <h4>Kembali ke Beranda</h4>
-    <ul>
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-    </ul>
+    <h4><a href="index.html">Kembali ke Beranda</a>
+</h4>
 </body>
 </html>
