--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
 <h2>Selamat Datang di Perpustakaan Aura!</h2>
 <p>Perkenalkan nama saya adalah <b>Aura Adisty Lesmana</b> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
   Perpustakaan ini akan berisi berbagai koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta <i>e-book</i> yang dapat diakses secara gratis.</p>
-<h3>Kerja Sama dan Referensi</h3>
-<a href="https://lib.ui.ac.id/">Perpustakaan Universitas Indonesia</a>
-<h4><ul>
+<h3>Buka Halaman Lain</h3> 
+<ul>
         <li>
-            <a href="Tentang-saya.html">Tentang Saya</a>
-        </li> </ul>
-</h4>
- <h4> <ul> <li>
-            <a href="Hubungi-kami.html">Hubungi kami</a>
+            <a href="Tentang-saya">Home</a>
         </li>
-    </ul> </h4>   
+        <li>
+            <a href="Hubungi-kami.html">Contact Us</a>
+        </li>
+    </ul>
+<h4>Kerja Sama dan Referensi
+<ul>
+        <li>
+  <a href="https://lib.ui.ac.id/">Perpustakaan Universitas Indonesia</a> </h4>
+          </li>
+    </ul>
 </body>
 </html>
