--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <h3>Buka Halaman Lain</h3> 
 <ul>
         <li>
-            <a href="Tentang-saya">Home</a>
+            <a href="Tentang-saya">Tentang Saya</a>
         </li>
         <li>
-            <a href="Hubungi-kami.html">Contact Us</a>
+            <a href="Hubungi-kami.html">HUbungi Kami Us</a>
         </li>
     </ul>
 <h4>Kerja Sama dan Referensi
