--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a href="Tentang-saya">Tentang Saya</a>
         </li>
         <li>
-            <a href="Hubungi-kami.html">HUbungi Kami Us</a>
+            <a href="Hubungi-kami.html">Hubungi Kami</a>
         </li>
     </ul>
 <h4>Kerja Sama dan Referensi
