--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -6,9 +6,21 @@
 		<title>About Me</title>
  </head>
 <body>
-	<h1>Contact Us</h1>
-	<p>Mau tau lebih banyak tentangku? Kirimi aku beberapa pesan dengan mengisi form dibawah ini agar kita bisa menjadi lebih dekat</p>
-    <form>
+	<h1>Ada Saran atau Pertanyaan? Hubungi Kami!</h1>
+	<p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, jangan ragu untuk menghubungi kami melalui:</p>
+     <ul>
+        <li>
+            <a href="mailto:auraadisty2@gmail.com">Email</a>
+        </li>
+	<li>
+	<a href="https://wa.me/082169656152">Chat via WhatsApp</a>
+	</li>
+	     <li> 
+	 <a href="https://www.instagram.com/au_rajin" target="_blank">Kunjungi Instagram</a>
+	     </li>
+     </ul>
+<p><b>Atau, Anda bisa mengisi formulir di bawah ini, terima kasih atas kunjungannya!</b></p>
+	<form>
         <label for="name">Nama:</label><br>
         <input type="text" id="name" name="name" placeholder="Masukkan nama Anda" required><br><br>
 
