--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -7,7 +7,7 @@
  </head>
 <body>
 	<h1>Ada Saran atau Pertanyaan? Hubungi Kami!</h1>
-	<p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, jangan ragu untuk menghubungi kami melalui:</p>
+	<p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, hubungi kami melalui:</p>
      <ul>
         <li>
             <a href="mailto:auraadisty2@gmail.com">Email</a>
@@ -19,17 +19,20 @@
 	 <a href="https://www.instagram.com/au_rajin" target="_blank">Kunjungi Instagram</a>
 	     </li>
      </ul>
-<p><b>Atau, Anda bisa mengisi formulir di bawah ini, terima kasih atas kunjungannya!</b></p>
+<p><b>Atau, Anda bisa mengisi formulir di bawah ini:</b></p>
 	<form>
-        <label for="name">Nama:</label><br>
+        <label for="name">Nama</label><br>
         <input type="text" id="name" name="name" placeholder="Masukkan nama Anda" required><br><br>
 
-        <label for="email">Email:</label><br>
+        <label for="email">Email</label><br>
         <input type="email" id="email" name="email" placeholder="Masukkan email Anda" required><br><br>
 
-        <label for="message">Pesan:</label><br>
+        <label for="message">Pesan</label><br>
         <textarea id="message" name="message" rows="5" placeholder="Tulis pesan Anda" required></textarea><br><br>
 
         <button type="submit">Kirim</button>
     </form>
+	<p>Terima kasih atas kunjungan Anda!</p>
+	  <a href="index.html">Kembali ke Beranda</a>
+
             
