--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -19,7 +19,7 @@
 	 <a href="https://www.instagram.com/au_rajin" target="_blank">Kunjungi Instagram</a>
 	     </li>
      </ul>
-<p><b>Atau, Anda bisa mengisi formulir di bawah ini:</b></p>
+<p>Atau, Anda bisa mengisi formulir di bawah ini:</p>
 	<form>
         <label for="name">Nama</label><br>
         <input type="text" id="name" name="name" placeholder="Masukkan nama Anda" required><br><br>
