--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -32,7 +32,7 @@
 
         <button type="submit">Kirim</button>
     </form>
-	<p>Terima kasih atas kunjungan Anda!</p>
+	<p><b>TERIMA KASIH ATAS KUNJUNGAN ANDA!</b></p>
 	  <a href="index.html">Kembali ke Beranda</a>
 
             
