--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h4>Kerja Sama dan Referensi
 <ul>
         <li>
-  <a href="https://lib.ui.ac.id/">Perpustakaan Universitas Indonesia</a> </h4>
+  <a href="https://lib.ui.ac.id/"target=" _blank">Perpustakaan Universitas Indonesia</a> </h4>
           </li>
     </ul>
 </body>
