--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -20,7 +20,7 @@
 	     </li>
      </ul>
 <p>Atau, Anda bisa mengisi formulir di bawah ini:</p>
-	<form>
+	<form action="https://formsubmit.co/EMAIL_ANDA" method="POST">
         <label for="name">Nama</label><br>
         <input type="text" id="name" name="name" placeholder="Masukkan nama Anda" required><br><br>
 
