--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<head><title>Beranda</title></head>
-<body>
+<head><title>Beranda</title><link rel="stylesheet" href="style.css"></head>
+  <body>
 <h1>PERPUSTAKAAN AURA</h1>
 <h2>Selamat Datang di Perpustakaan Aura!</h2>
 <p>Perkenalkan nama saya adalah <b>Aura Adisty Lesmana</b> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
