--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Beranda</title><link rel="stylesheet" href="style.css"></head>
+<head><title>Beranda</title></head>
   <body>
 <h1>PERPUSTAKAAN AURA</h1>
 <h2>Selamat Datang di Perpustakaan Aura!</h2>
