--- a/index.html
+++ b/index.html
@@ -1,24 +1,39 @@
-<html>
-<head><title>Beranda</title></head>
-  <body>
-<h1>PERPUSTAKAAN AURA</h1>
-<h2>Selamat Datang di Perpustakaan Aura!</h2>
-<p>Perkenalkan nama saya adalah <b>Aura Adisty Lesmana</b> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
-  Perpustakaan ini akan berisi berbagai koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta <i>e-book</i> yang dapat diakses secara gratis.</p>
-<h3>Buka Halaman Lain</h3> 
-<ul>
-        <li>
-            <a href="Tentang-saya">Tentang Saya</a>
-        </li>
-        <li>
-            <a href="Hubungi-kami.html">Hubungi Kami</a>
-        </li>
-    </ul>
-<h4>Kerja Sama dan Referensi
-<ul>
-        <li>
-  <a href="https://lib.ui.ac.id/" target="_blank">Perpustakaan Universitas Indonesia</a> </h4>
-          </li>
-    </ul>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Perpustakaan Aura</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>PERPUSTAKAAN AURA</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Tentang Saya</a></li>
+                <li><a href="#">Hubungi Kami</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="container">
+        <section>
+            <h2>Selamat Datang di Perpustakaan Aura!</h2>
+            <p>Perkenalkan nama saya adalah <strong>Aura Adisty Lesmana</strong> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
+            Perpustakaan ini akan berisi berbagai koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta <i>e-book</i> yang dapat diakses secara gratis.</p>
+        </section>
+
+        <section>
+            <h2>Kerja Sama dan Referensi</h2>
+            <ul>
+                <li><a href="https://lib.ui.ac.id/" target="_blank">Perpustakaan Universitas Indonesia</a></li>
+            </ul>
+        </section>
+    </div>
+
+    <footer>
+        &copy; 2025 Aura Adisty Lesmana
+    </footer>
 </body>
 </html>
