--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>PERPUSTAKAAN AURA</h1>
         <nav>
             <ul>
-                <li><a href="#">Tentang Saya</a></li>
-                <li><a href="#">Hubungi Kami</a></li>
+                <li><a href="#">Tentang-Saya</a></li>
+                <li><a href="#">Hubungi-Kami</a></li>
             </ul>
         </nav>
     </header>
