--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>PERPUSTAKAAN AURA</h1>
         <nav>
             <ul>
-                <li><a href="#">Tentang-Saya.html</a></li>
-                <li><a href="#">Hubungi-Kami.html</a></li>
+                <li><a href="Tentang-saya.html">Tentang Saya</a></li> 
+                <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
             </ul>
         </nav>
     </header>
