--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -1,39 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
- <head>
+<html lang="id">
+<head>
     <meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>About Me</title>
-	 <link rel="stylesheet" href="style.css">
- </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hubungi Kami</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-	<h1>Ada Saran atau Pertanyaan? Hubungi Kami!</h1>
-	<p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, hubungi kami melalui:</p>
-     <ul>
-        <li>
-            <a href="mailto:auraadisty2@gmail.com">Email</a>
-        </li>
-	<li>
-	<a href="https://wa.me/6282169656152">Chat via WhatsApp</a>
-	</li>
-	     <li> 
-	 <a href="https://www.instagram.com/au_rajin" target="_blank">Kunjungi Instagram</a>
-	     </li>
-     </ul>
-<p>Atau, Anda bisa mengisi formulir di bawah ini:</p>
-	<form action="https://formsubmit.co/auraadisty2@gmail.com" method="POST">
-        <label for="name">Nama</label><br>
-        <input type="text" id="name" name="name" placeholder="Masukkan nama Anda" required><br><br>
 
-        <label for="email">Email</label><br>
-        <input type="email" id="email" name="email" placeholder="Masukkan email Anda" required><br><br>
+<header>
+    PERPUSTAKAAN AURA
+</header>
 
-        <label for="message">Pesan</label><br>
-        <textarea id="message" name="message" rows="5" placeholder="Tulis pesan Anda" required></textarea><br><br>
+<nav>
+    <ul>
+        <li><a href="index.html">Beranda</a></li>
+        <li><a href="Tentang-saya.html">Tentang Saya</a></li>
+    </ul>
+</nav>
+
+<div class="container">
+    <h1>Ada Saran atau Pertanyaan? Hubungi Kami!</h1>
+    <p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, hubungi kami melalui:</p>
+    <ul>
+        <li><a href="#">Email</a></li>
+        <li><a href="#">Chat via WhatsApp</a></li>
+        <li><a href="#">Kunjungi Instagram</a></li>
+    </ul>
+
+    <h2>Atau, Anda bisa mengisi formulir di bawah ini:</h2>
+    <form>
+        <label>Nama</label><br>
+        <input type="text" placeholder="Masukkan nama Anda"><br><br>
+
+        <label>Email</label><br>
+        <input type="email" placeholder="Masukkan email Anda"><br><br>
+
+        <label>Pesan</label><br>
+        <textarea placeholder="Tulis pesan Anda"></textarea><br><br>
 
         <button type="submit">Kirim</button>
     </form>
-	<p><b>TERIMA KASIH ATAS KUNJUNGAN ANDA!</b></p>
-	  <a href="index.html">Kembali ke Beranda</a>
 
-            
+    <br>
+    <a href="index.html">Kembali ke Beranda</a>
+</div>
+
+<footer>
+    &copy; Aura Adisty Lesmana 2025
+</footer>
+
+</body>
+</html>
