--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -4,39 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tentang Saya</title>
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<header>
+    PERPUSTAKAAN AURA
+</header>
+
+<nav>
+    <ul>
+        <li><a href="index.html">Beranda</a></li>
+        <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
+    </ul>
+</nav>
+
+<div class="container">
     <h1>Data Pribadi</h1>
-<p>Halaman ini berisi tentang informasi pribadi saya</p>
-    <table>
+    <p>Halaman ini berisi tentang informasi pribadi saya</p>
+
+    <table border="1" width="100%">
         <tr>
             <th>Informasi</th>
             <th>Detail</th>
         </tr>
         <tr>
-            <td><b>Nama</b></td>
+            <td>Nama</td>
             <td>Aura Adisty Lesmana</td>
         </tr>
         <tr>
-            <td><b>NIM</b></td>
+            <td>NIM</td>
             <td>220709067</td>
         </tr>
         <tr>
-            <td><b>Program Studi</b></td>
+            <td>Program Studi</td>
             <td>Perpustakaan dan Sains Informasi</td>
         </tr>
         <tr>
-            <td><b>Fakultas</b></td>
+            <td>Fakultas</td>
             <td>Ilmu Budaya</td>
         </tr>
         <tr>
-            <td><b>Universitas</b></td>
+            <td>Universitas</td>
             <td>Universitas Sumatera Utara</td>
         </tr>
     </table>
-    <h4><a href="index.html">Kembali ke Beranda</a>
-</h4>
+
+    <br>
+    <a href="index.html">Kembali ke Beranda</a>
+</div>
+
+<footer>
+    &copy; Aura Adisty Lesmana 2025
+</footer>
+
 </body>
 </html>
