--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section>
             <h2>Kerja Sama dan Referensi</h2>
             <ul>
-                <li><a href="https://lib.ui.ac.id/" target="_blank">Perpustakaan Universitas Indonesia</a></li>
+                <a href="https://lib.ui.ac.id/" target="_blank">Perpustakaan Universitas Indonesia</a>
             </ul>
         </section>
     </div>
