--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-    PERPUSTAKAAN AURA
+   <h1>PERPUSTAKAAN AURA</h1> 
     <nav>
     <ul>
         <li><a href="index.html">Beranda</a></li>
@@ -17,9 +17,8 @@
     </ul>
 </nav>
 </header>
-
 <div class="container">
-    <h1>Ada Saran atau Pertanyaan? Hubungi Kami!</h1>
+    <h2>Ada Saran atau Pertanyaan? Hubungi Kami!</h2>
     <p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, hubungi kami melalui:</p>
     <ul>
         <li><a href="#">Email</a></li>
@@ -27,7 +26,7 @@
         <li><a href="#">Kunjungi Instagram</a></li>
     </ul>
 
-    <h2>Atau, Anda bisa mengisi formulir di bawah ini:</h2>
+    <h3>Atau, Anda bisa mengisi formulir di bawah ini:</h3>
     <form>
         <label>Nama</label><br>
         <input type="text" placeholder="Masukkan nama Anda"><br><br>
