--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Perpustakaan Aura</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
+    <script> 
     <header>
         <h1>PERPUSTAKAAN AURA</h1>
         <nav>
@@ -16,7 +17,6 @@
             </ul>
         </nav>
     </header>
-
     <div class="container">
         <section>
             <h2>Selamat Datang di Perpustakaan Aura!</h2>
@@ -31,9 +31,9 @@
             </ul>
         </section>
     </div>
-
+</script>
+                </body>
     <footer>
         &copy; 2025 Aura Adisty Lesmana
     </footer>
-</body>
 </html>
