--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body> 
     <script> 
+        document. write 
+    </script>
     <header>
         <h1>PERPUSTAKAAN AURA</h1>
         <nav>
@@ -31,7 +33,6 @@
             </ul>
         </section>
     </div>
-</script>
                 </body>
     <footer>
         &copy; 2025 Aura Adisty Lesmana
