--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body> 
     <script> 
-        document. write ("Hello")
+        Window.alert ("Hello")
     </script>
     <header>
         <h1>PERPUSTAKAAN AURA</h1>
