--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -7,18 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
 <header>
-    PERPUSTAKAAN AURA
-</header>
-
-<nav>
+    <h1>PERPUSTAKAAN AURA</h1>
+    <nav>
     <ul>
         <li><a href="index.html">Beranda</a></li>
         <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
     </ul>
 </nav>
-
+</header>
 <div class="container">
     <h1>Data Pribadi</h1>
     <p>Halaman ini berisi tentang informasi pribadi saya</p>
