--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body> 
     <script> 
-        windows.alert("Welcome to Perpustakaan Aura")
+        alert("Welcome to Perpustakaan Aura")
     </script>
     <header>
         <h1>PERPUSTAKAAN AURA</h1>
