--- a/index.html
+++ b/index.html
@@ -7,13 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-   <p id="pesan">Teks akan berubah...</p>
-    <button onclick="ubahTeks()">Klik Saya</button>
-
     <script>
-        function ubahTeks() {
-            document.getElementById("pesan").innerHTML = "Teks berubah setelah tombol diklik!";
-        }
+       alert("Welcome to Perpustakaan Aura")
     </script>
     <header>
         <h1>PERPUSTAKAAN AURA</h1>
