--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    <p id="teks">Ubah warna teks</p>
-<button onclick="ubahWarna()">Ubah Warna</button>
 <script>
-  function ubahWarna() {
-    document.getElementById("teks").style.color = "red";
-  }
+ alert("Welcome to Perpustakaan Aura")
 </script>
     <header>
         <h1>PERPUSTAKAAN AURA</h1>
