--- a/index.html
+++ b/index.html
@@ -36,5 +36,12 @@
     <footer>
         &copy; 2025 Aura Adisty Lesmana
     </footer>
-                </body>
+     <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        // Menambahkan animasi ke elemen judul dan paragraf
+        document.querySelector("h1").classList.add("animated");
+        document.querySelector("p").classList.add("animated");
+    });
+</script>          
+</body>
 </html>
