--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -27,6 +27,7 @@
     </ul>
 
     <h3>Atau, Anda bisa mengisi formulir di bawah ini:</h3>
+    <form> 
     <form action="https://formsubmit.co/adistyauralesmana@gmail.com" method="POST">
         <label>Nama</label><br>
         <input type="text" placeholder="Masukkan nama Anda"><br><br>
