--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
     <div class="container">
         <section>
             <h2>Selamat Datang di Perpustakaan Aura!</h2>
-            <p>Perkenalkan nama saya adalah <strong>Aura Adisty Lesmana</strong> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
-            Perpustakaan ini akan berisi berbagai koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta <i>e-book</i> yang dapat diakses secara gratis.</p>
+            <p>Halo! Nama saya <b>Aura Adisty Lesmana</b>, dan saya dengan bangga mempersembahkan <b>Perpustakaan Aura</b>, sebuah perpustakaan pribadi yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
+                Perpustakaan ini hadir sebagai ruang digital yang memungkinkan siapa saja untuk mengakses berbagai koleksi buku pribadi, arsip tugas perkuliahan, serta e-book yang dapat diunduh secara gratis. 
+                Melalui perpustakaan ini, saya berharap dapat memberikan manfaat bagi mahasiswa, peneliti, dan pecinta literasi yang ingin memperluas wawasan di berbagai bidang. 
+                Selain itu, saya juga menjalin kerja sama dan merujuk pada berbagai sumber akademik, termasuk **Perpustakaan Universitas Indonesia**, untuk memperkaya referensi dan memastikan ketersediaan bahan bacaan yang berkualitas. 
+                Silakan jelajahi koleksi yang tersedia, manfaatkan sumber daya yang ada, dan mari bersama-sama membangun komunitas literasi yang dinamis serta saling berbagi pengetahuan!</p>
         </section>
 
         <section>
