--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
 
         <section>
             <h2>Kerja Sama dan Referensi</h2> 
-         <a href="https://lib.ui.ac.id/" target="_blank">Perpustakaan Universitas Indonesia</a>
+         <li> <a href="https://lib.ui.ac.id/" target="_blank">Perpustakaan Universitas Indonesia</a>
+        </li>
+            <li> <a href="https://library.usu.ac.id/" target="_blank">Perpustakaan Universitas Sumatera Utara</a>
+        </li>
+            <li> <a href="https://lib.unri.ac.id/" target="_blank">Perpustakaan Universitas Riau</a> 
+        </li>
         </section>
     </div>
     <footer>
