--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -26,7 +26,7 @@
         <li><a href="#">Kunjungi Instagram</a></li>
     </ul>
 
-    <h3>Atau, Anda bisa mengisi formulir di bawah ini:</h3>
+    <p>Atau, Anda bisa mengisi formulir di bawah ini:</p>
     <form> 
     <form action="https://formsubmit.co/adistyauralesmana@gmail.com" method="POST">
         <label>Nama</label><br>
