--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -26,29 +26,22 @@
         <li><a href="#">Kunjungi Instagram</a></li>
     </ul>
 
-    <!-- Trigger untuk menampilkan form -->
-<p class="trigger">Arahkan kursor ke sini untuk mengisi formulir</p>
+     <form action="https://formsubmit.co/adistyauralesmana@gmail.com" method="POST">
+        <label>Nama</label><br>
+        <input type="text" placeholder="Masukkan nama Anda"><br><br>
 
-<!-- Overlay untuk efek pop-up -->
-<div class="overlay"></div>
+        <label>Email</label><br>
+        <input type="email" placeholder="Masukkan email Anda"><br><br>
 
-<!-- Formulir yang akan muncul sebagai pop-up -->
-<div class="form-container">
-    <form action="https://formsubmit.co/adistyauralesmana@gmail.com" method="POST">
-        <label>Nama</label>
-        <input type="text" placeholder="Masukkan nama Anda">
-
-        <label>Email</label>
-        <input type="email" placeholder="Masukkan email Anda">
-
-        <label>Pesan</label>
-        <textarea placeholder="Tulis pesan Anda"></textarea>
+        <label>Pesan</label><br>
+        <textarea placeholder="Tulis pesan Anda"></textarea><br><br>
 
         <button type="submit">Kirim</button>
-        <button type="button" class="close-btn">Tutup</button>
     </form>
-</div>
 
+    <br>
+    <a href="index.html">Kembali ke Beranda</a>
+</div>
     <br>
     <a href="index.html">Kembali ke Beranda</a>
 </div>
