--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -34,7 +34,7 @@
         <input type="email" placeholder="Masukkan email Anda"><br><br>
 
         <label>Pesan</label><br>
-        <textarea placeholder="Tulis pesan Anda"></textarea><br><br>
+        <input type="Tulis Pesan Anda" placeholder="Tulis Pesan Anda"><br><br>
 
         <button type="submit">Kirim</button>
     </form>
