--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -25,7 +25,7 @@
         <li><a href="#">Chat via WhatsApp</a></li>
         <li><a href="#">Kunjungi Instagram</a></li>
     </ul>
-    <p>atau, Anda dapat mengisi form di bawah ini:</p>
+    <p>Atau, Anda dapat mengisi form di bawah ini:</p>
      <form action="https://formsubmit.co/adistyauralesmana@gmail.com" method="POST">
         <label>Nama</label><br>
         <input type="text" placeholder="Masukkan nama Anda"><br><br>
