--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -21,7 +21,7 @@
     <h2>Data Pribadi</h2>
     <p>Halaman ini berisi tentang informasi pribadi saya</p>
 
-    <table border="1" width="100%">
+    <table class="table table-bordered table-striped table-hover">
         <tr>
             <th>Informasi</th>
             <th>Detail</th>
