--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -20,8 +20,7 @@
 <div class="container">
     <h2>Data Pribadi</h2>
     <p>Halaman ini berisi tentang informasi pribadi saya</p>
-    <div class="table-responsive">
-    <table class="table table-bordered table-striped table-hover table-light">
+    <table class="table table-bordered table-striped">
         <tr>
             <th>Informasi</th>
             <th>Detail</th>
