--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -20,7 +20,7 @@
 <div class="container">
     <h2>Data Pribadi</h2>
     <p>Halaman ini berisi tentang informasi pribadi saya</p>
-    <table class="table table-bordered table-striped">
+    <table class="table table-bordered">
         <tr>
             <th>Informasi</th>
             <th>Detail</th>
