--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
     </div>
     <footer>
-        &copy; 2025 Aura Adisty Lesmana
+        &copy; 2025 Perpustakaan Aura
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
    <script>
