--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body> 
     <header>
+        <div class="d-flex align-items-center">
         <h1>PERPUSTAKAAN AURA</h1>
+        <img src="gambar/buku.gif" alt="Animasi Buku" class="img-fluid"> </div>
         <nav>
             <ul>
                 <li><a href="Tentang-saya.html">Tentang Saya</a></li> 
