--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="d-flex align-items-center">
         <h1>PERPUSTAKAAN AURA</h1>
-        <img src="gambar/buku.gif" alt="Animasi Buku" class="img-fluid"> </div>
+        <img src="gambar/girl book.gif" alt="Animasi Buku" class="img-fluid"> </div>
         <nav>
             <ul>
                 <li><a href="Tentang-saya.html">Tentang Saya</a></li> 
