--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body> 
     <header>
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-left">
         <h1>PERPUSTAKAAN AURA</h1>
         <img src="gambar/girl book.gif" alt="Animasi Buku" class="img-fluid"> </div>
         <nav>
