--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body> 
     <header>
-        <div class="d-flex align-items-left">
         <h1>PERPUSTAKAAN AURA</h1>
-        <img src="gambar/girl book.gif" alt="Animasi Buku" class="img-fluid"> </div>
         <nav>
             <ul>
                 <li><a href="Tentang-saya.html">Tentang Saya</a></li> 
@@ -40,6 +38,7 @@
         </section>
     </div>
     <footer>
+        <img src="gambar/buku.gif" alt="Animasi Buku" class="img-fluid" style="max-width: 70%; display: block; margin: auto;">
         &copy; 2025 Perpustakaan Aura
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
