--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    <header>
-        <h1>PERPUSTAKAAN AURA</h1>
-        <nav>
-            <ul>
-                <li><a href="Tentang-saya.html">Tentang Saya</a></li> 
-                <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
+     <header class="bg-maroon text-white p-3">
+        <div class="container d-flex align-items-center">
+            <!-- GIF di ujung kiri -->
+            <img src="gambar/buku.gif" alt="Logo Buku" class="logo-gif me-3">
+            <h1 class="mb-0">PERPUSTAKAAN AURA</h1>
+        </div>
+        <nav class="mt-2">
+            <ul class="nav">
+                <li class="nav-item"><a class="nav-link text-white" href="Tentang-saya.html">Tentang Saya</a></li> 
+                <li class="nav-item"><a class="nav-link text-white" href="Hubungi-kami.html">Hubungi Kami</a></li>
             </ul>
         </nav>
     </header>
@@ -38,7 +42,6 @@
         </section>
     </div>
     <footer>
-        <img src="gambar/buku.gif" alt="Animasi Buku" class="img-fluid" style="max-width: 70%; display: block; margin: auto;">
         &copy; 2025 Perpustakaan Aura
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
