--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <header class="bg-maroon text-white p-3">
         <div class="container d-flex align-items-center">
             <!-- GIF di ujung kiri -->
-            <img src="gambar/buku.gif" alt="Logo Buku" class="logo-gif me-3">
+            <img src="gambar/buku buku.gif" alt="Logo Buku" class="logo-gif me-3">
             <h1 class="mb-0">PERPUSTAKAAN AURA</h1>
         </div>
         <nav class="mt-2">
