--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-     <header class="bg-maroon text-white p-3">
-        <div class="container d-flex align-items-center">
-            <!-- GIF di ujung kiri -->
-            <img src="gambar/buku.gif" alt="Logo Buku" class="logo-gif">
-            <h1 class="mb-0">PERPUSTAKAAN AURA</h1>
-        </div>
-        <nav class="mt-2">
-            <ul class="nav">
-                <li class="nav-item"><a class="nav-link text-white" href="Tentang-saya.html">Tentang Saya</a></li> 
-                <li class="nav-item"><a class="nav-link text-white" href="Hubungi-kami.html">Hubungi Kami</a></li>
+        <header>
+            <img src="gambar/buku buku.gif" alt="Logo Buku" class="logo-gif">
+        <h1>PERPUSTAKAAN AURA</h1>
+        <nav>
+            <ul>
+                <li><a href="Tentang-saya.html">Tentang Saya</a></li> 
+                <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
             </ul>
         </nav>
     </header>
