--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body> 
         <header>
-            <img src="gambar/buku buku.gif" alt="Logo Buku" class="logo-gif">
+            <img src="gambar/buku 2.gif" alt="Logo Buku" class="logo-gif">
         <h1>PERPUSTAKAAN AURA</h1>
         <nav>
             <ul>
