--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <ul>
                 <li><a href="Tentang-saya.html">Tentang Saya</a></li> 
                 <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
+                <li><a href="koleksi.html">Koleksi Buku</a></li>
             </ul>
         </nav>
     </header>
