--- a/koleksi.html
+++ b/koleksi.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Beranda</a></li>
                 <li><a href="Tentang-saya.html">Tentang Saya</a></li> 
                 <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
-                <li><a href="koleksi-buku.html">Koleksi Buku</a></li> <!-- Aktif -->
+                <li><a href="koleksi-buku.html">Koleksi Buku</a></li>
             </ul>
         </nav>
     </header>
@@ -27,10 +27,11 @@
                 <!-- Buku 1 -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="gambar-buku1.jpg" class="card-img-top" alt="Judul Buku 1">
+                        <img src="gambar-buku1.jpg" class="card-img-top" alt="Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS">
                         <div class="card-body">
-                            <h5 class="card-title">Judul Buku 1</h5>
-                            <p class="card-text">Deskripsi singkat buku ini.</p>
+                            <h5 class="card-title">Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS</h5>
+                            <p class="card-text">Buku Map of the Soul 7: Persona, Shadow & Ego in the World of BTS ditulis oleh Murray Stein, seorang penulis buku tentang kejiwaan manusia yang berpusat pada pendekatan psikoanaisis Carl Gustav Jung. 
+                                Buku Map of the Soul 7 ini merupakan buku terakhir dari buku seri Map of the Soul. Buku ini melengkapi buku seri sebelumnya, yakni Jung’s Map of the Soul: An Introduction, dan Map of the Soul: Persona.</p>
                             <a href="#" class="btn btn-primary">Baca</a>
                         </div>
                     </div>
@@ -38,10 +39,11 @@
                 <!-- Buku 2 -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="gambar-buku2.jpg" class="card-img-top" alt="Judul Buku 2">
+                        <img src="gambar-buku2.jpg" class="card-img-top" alt="Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?">
                         <div class="card-body">
-                            <h5 class="card-title">Judul Buku 2</h5>
-                            <p class="card-text">Deskripsi singkat buku ini.</p>
+                            <h5 class="card-title">Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?</h5>
+                            <p class="card-text">Tulisan-tulisan ini memiliki keterkaitan dengan keseharian seseorang, sehingga pembaca bisa merasa terhubung dengan buku ini.
+                                Beberapa topik yang dibahas di dalam buku ini misalnya mengenai kesalahan dalam hidup, keegoisan, sifat baik terhadap sesama, rasa gugup, mimpi, penilaian terhadap orang lain, dan terakhir, mengenai apa itu definisi kebaikan menurut sang penulis.</p>
                             <a href="#" class="btn btn-primary">Baca</a>
                         </div>
                     </div>
@@ -49,10 +51,13 @@
                 <!-- Buku 3 -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="gambar-buku3.jpg" class="card-img-top" alt="Judul Buku 3">
+                        <img src="gambar-buku3.jpg" class="card-img-top" alt="Kitchen">
                         <div class="card-body">
-                            <h5 class="card-title">Judul Buku 3</h5>
-                            <p class="card-text">Deskripsi singkat buku ini.</p>
+                            <h5 class="card-title">Kitchen</h5>
+                            <p class="card-text"> Kitchen merupakan novel yang ditulis oleh Yoshimoto Banana, penulis asal Jepang. 
+                                Novel Kitchen pertama kali diterbitkan pada tahun 1988 dan sudah diterjemahkan ke dalam Bahasa Inggris pada tahun 1993 oleh Megan Backus. 
+                                Seluruh tokoh dalam kumpulan novel ini mengalami pergulatan batin akibat ditinggalkan oleh orang yang mereka cintai. 
+                                Seperti kakek, nenek, orang tua, dan juga kekasih. Mereka menghadapi keseharian mereka yang terus berjalan, kemudian mereka sadar dalam kesepian yang dialaminya bahwa dunia ini penuh dengan keseimbangan unik di tengah kehidupan dan kematian.</p>
                             <a href="#" class="btn btn-primary">Baca</a>
                         </div>
                     </div>
