--- a/koleksi.html
+++ b/koleksi.html
@@ -51,7 +51,7 @@
                 <!-- Buku 3 -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="gambar-buku3.jpg" class="card-img-top" alt="Kitchen">
+                        <img src="kitchen.jpeg" class="card-img-top" alt="Kitchen">
                         <div class="card-body">
                             <h5 class="card-title">Kitchen</h5>
                             <p class="card-text"> Kitchen merupakan novel yang ditulis oleh Yoshimoto Banana, penulis asal Jepang. 
