--- a/koleksi.html
+++ b/koleksi.html
@@ -39,7 +39,7 @@
                 <!-- Buku 2 -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="gambar-buku2.jpg" class="card-img-top" alt="Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?">
+                        <img src="gambar/gambar buku 2.webp" class="card-img-top" alt="Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?">
                         <div class="card-body">
                             <h5 class="card-title">Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?</h5>
                             <p class="card-text">Tulisan-tulisan ini memiliki keterkaitan dengan keseharian seseorang, sehingga pembaca bisa merasa terhubung dengan buku ini.
@@ -51,7 +51,7 @@
                 <!-- Buku 3 -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="kitchen.jpeg" class="card-img-top" alt="Kitchen">
+                        <img src="gambar/gambar buku 3.webp" class="card-img-top" alt="Kitchen">
                         <div class="card-body">
                             <h5 class="card-title">Kitchen</h5>
                             <p class="card-text"> Kitchen merupakan novel yang ditulis oleh Yoshimoto Banana, penulis asal Jepang. 
