--- a/koleksi.html
+++ b/koleksi.html
@@ -27,7 +27,7 @@
                
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="gambar/mots 7.jpeg" class="card-img-top" alt="Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS">
+                        <img src="gambar/MOTS 7.jpg" class="card-img-top" alt="Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS">
                         <div class="card-body">
                             <h5 class="card-title">Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS</h5>
                             <p class="card-text">Buku Map of the Soul 7: Persona, Shadow & Ego in the World of BTS ditulis oleh Murray Stein, seorang penulis buku tentang kejiwaan manusia yang berpusat pada pendekatan psikoanaisis Carl Gustav Jung. 
