--- a/koleksi.html
+++ b/koleksi.html
@@ -32,7 +32,7 @@
                             <h5 class="card-title">Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS</h5>
                             <p class="card-text">Buku Map of the Soul 7: Persona, Shadow & Ego in the World of BTS ditulis oleh Murray Stein, seorang penulis buku tentang kejiwaan manusia yang berpusat pada pendekatan psikoanaisis Carl Gustav Jung. 
                                 Buku Map of the Soul 7 ini merupakan buku terakhir dari buku seri Map of the Soul. Buku ini melengkapi buku seri sebelumnya, yakni Jung’s Map of the Soul: An Introduction, dan Map of the Soul: Persona.</p>
-                            <a href="#" class="btn btn-primary">Baca</a>
+                            <a href="#" class="btn-baca">Baca</a>
                         </div>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                             <h5 class="card-title">Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?</h5>
                             <p class="card-text">Tulisan-tulisan ini memiliki keterkaitan dengan keseharian seseorang, sehingga pembaca bisa merasa terhubung dengan buku ini.
                                 Beberapa topik yang dibahas di dalam buku ini misalnya mengenai kesalahan dalam hidup, keegoisan, sifat baik terhadap sesama, rasa gugup, mimpi, penilaian terhadap orang lain, dan terakhir, mengenai apa itu definisi kebaikan menurut sang penulis.</p>
-                            <a href="#" class="btn btn-primary">Baca</a>
+                            <a href="#" class="btn-baca">Baca</a>
                         </div>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                                 Novel Kitchen pertama kali diterbitkan pada tahun 1988 dan sudah diterjemahkan ke dalam Bahasa Inggris pada tahun 1993 oleh Megan Backus. 
                                 Seluruh tokoh dalam kumpulan novel ini mengalami pergulatan batin akibat ditinggalkan oleh orang yang mereka cintai. 
                                 Seperti kakek, nenek, orang tua, dan juga kekasih. Mereka menghadapi keseharian mereka yang terus berjalan, kemudian mereka sadar dalam kesepian yang dialaminya bahwa dunia ini penuh dengan keseimbangan unik di tengah kehidupan dan kematian.</p>
-                            <a href="#" class="btn btn-primary">Baca</a>
+                            <a href="#" class="btn-baca">Baca</a>
                         </div>
                     </div>
                 </div>
