--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -14,6 +14,7 @@
     <ul>
         <li><a href="index.html">Beranda</a></li>
         <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
+        <li><a href="koleksi-buku.html">Koleksi Buku</a></li>
     </ul>
 </nav>
 </header>
