--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -15,7 +15,7 @@
     <ul>
         <li><a href="index.html">Beranda</a></li>
         <li><a href="Tentang-saya.html">Tentang Saya</a></li>
-        <li><a href="koleksi-buku.html">Koleksi Buku</a></li>
+        <li><a href="koleksi.html">Koleksi</a></li>
     </ul>
 </nav>
 </header>
