--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-        <header>
-            <img src="gambar/buku 2.gif" alt="Logo Buku" class="logo-gif">
-        <h1>PERPUSTAKAAN AURA</h1>
-        <nav>
-            <ul>
-                <li><a href="Tentang-saya.html">Tentang Saya</a></li> 
-                <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
-                <li><a href="koleksi.html">Koleksi</a></li>
-            </ul>
-        </nav>
-    </header>
+       <header>
+    <h1>PERPUSTAKAAN AURA</h1>
+    <button class="menu-toggle">&#9776;</button>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="#">Beranda</a></li>
+            <li><a href="#">Tentang Saya</a></li>
+            <li><a href="#">Hubungi Kami</a></li>
+            <li><a href="#">Koleksi</a></li>
+        </ul>
+    </nav>
+</header>
+
     <div class="container">
         <section>
             <h2>Selamat Datang di Perpustakaan Aura!</h2>
