--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <button class="menu-toggle">&#9776;</button>
     <nav>
         <ul class="nav-links">
-            <li><a href="#">Beranda</a></li>
-            <li><a href="#">Tentang Saya</a></li>
-            <li><a href="#">Hubungi Kami</a></li>
-            <li><a href="#">Koleksi</a></li>
+            <li><a href="index.html">Beranda</a></li>
+            <li><a href="Tentang-saya.html">Tentang Saya</a></li>
+            <li><a href="Hubungi-kami">Hubungi Kami</a></li>
+            <li><a href="koleksi.html">Koleksi</a></li>
         </ul>
     </nav>
 </header>
