--- a/koleksi.html
+++ b/koleksi.html
@@ -69,5 +69,6 @@
         &copy; 2025 Perpustakaan Aura
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+     <script src="script.js"></script>
 </body>
 </html>
