--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -56,5 +56,6 @@
     &copy; Aura Adisty Lesmana 2025
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+     <script src="script.js"></script>
 </body>
 </html>
