--- a/koleksi.html
+++ b/koleksi.html
@@ -21,7 +21,7 @@
 
     <div class="container">
         <section class="my-5">
-            <h2 class="text-center mb-4">Daftar Buku</h2>
+            <h2 class="text-center mb-4">Koleksi Pribadi</h2>
             <div class="row">
                
                 <div class="col-md-4">
