--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -11,13 +11,15 @@
 
 <header>
    <h1>PERPUSTAKAAN AURA</h1> 
+    <button class="menu-toggle">&#9776;</button>
     <nav>
-    <ul>
-        <li><a href="index.html">Beranda</a></li>
-        <li><a href="Tentang-saya.html">Tentang Saya</a></li>
-        <li><a href="koleksi.html">Koleksi</a></li>
-    </ul>
-</nav>
+        <ul class="nav-links">
+            <li><a href="index.html">Beranda</a></li>
+            <li><a href="Tentang-saya.html">Tentang Saya</a></li>
+            <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
+            <li><a href="koleksi.html">Koleksi</a></li>
+        </ul>
+    </nav>
 </header>
 <div class="container">
     <h2>Ada Saran atau Pertanyaan? Hubungi Kami!</h2>
